// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTestCases records issue-2991 exported tests should write relative paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 3
    },
    \\"bySource\\": {},
    \\"usedIds\\": [
      3
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"./test.js\\": 9,
      \\"external \\\\\\"fs\\\\\\"\\": 3,
      \\"external \\\\\\"path\\\\\\"\\": 7,
      \\"ignored|pkgs/somepackage/foo\\": 1
    },
    \\"usedIds\\": [
      1,
      3,
      7,
      9
    ]
  }
}"
`;

exports[`ConfigTestCases records issue-7339 exported tests should write relative dynamic-require paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 3
    },
    \\"bySource\\": {},
    \\"usedIds\\": [
      3
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"./dependencies/bar.js\\": 2,
      \\"./dependencies/foo.js\\": 1,
      \\"./dependencies|sync|/^\\\\\\\\.\\\\\\\\/.*$/\\": 8,
      \\"./test.js\\": 9,
      \\"external \\\\\\"fs\\\\\\"\\": 3,
      \\"external \\\\\\"path\\\\\\"\\": 7
    },
    \\"usedIds\\": [
      1,
      2,
      3,
      7,
      8,
      9
    ]
  }
}"
`;
